fixed contrast on h3

--- a/src/components/Home/Home.module.css
+++ b/src/components/Home/Home.module.css
@@ -1,4 +1,5 @@
-.welcome {
+.welcome,
+.login {
   color: white;
 }
 
